update: Various updates (#8)
Signed-off-by: dhoard <doug.hoard@gmail.com>